# vsc-artemis-quantum

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: ecosafety-ci.yml
.titan-net/: VirtualHardwareProfile2026v1.aln
aln/: ArtemisEnvPlanes2026v1.aln
aln/contracts/: EcoSafetyKernel_v1.aln  QuantumOrthogonalityGuard.aln
aln/schema/: CorridorBand.v1.aln  MetricField.v1.aln  ResearchPlanShard.v1.aln
android/: CorridorSynergyService.kt
artemis-corridor-synergy/: Cargo.toml
artemis-corridor-synergy/src/: lib.rs
c/include/: qvm_logic_telemetry.hpp
c/src/: qvm_logic_telemetry.cpp
cluster/src/guardian/: ai0_qpu_lyapunov_guardian.cpp
contracts/: ArtemisCorridorSynergy.aln
crates/aln-specs/: alnci-ker-deployment-guards.aln  quantum-qvm-plane-2026-logic-resilience.aln
crates/ker-core/src/: lib.rs
crates/kercore/src/: lib.rs
crates/logicalqubits/src/: controller.rs  lib.rs
crates/qpushards/src/: lib.rs
docs/: CorridorSynergyAnalyzer.md  ECOSAFETY_SPINE.md  RESEARCHPLAN_LIFECYCLE.md
docs/governance/: artemis-doclink-removal-notice.md
include/: artemis_nexus.hpp  ceim_kernel.hpp  scenario.hpp
include/artemis/: corridors.hpp  lyapunov.hpp  metrics.hpp
include/artemis/carbon_health/: furnace_kernel.hpp
include/artemis/energy/: turbine_kernel.hpp
include/artemis/hydraulic/: sewer_kernel.hpp
include/artemis/neuromorphic/: snn_quality_kernel.hpp
include/vsc/artemis/: quantum_circuit_simulator.hpp
lua/ci/: check_crossplane_dependencies.lua
lua/fog/: qvm_logic_router.lua
native/cpp/include/: qcs_metrics.hpp
native/cpp/src/: qcs_metrics.cpp
output/deploy/: quantum_deployment_manifest.yaml
output/specs/: governance_contract_quantum.aln
proposals/: improvement_proposal_v1.aln
qpudatashardsparticles/: ArtemisEnvPlanes2026v1.aln
src/: main.cpp  quantum_safety_kernel.cpp  scenario_engine.cpp
src/kernel/: CMakeLists.txt  CorridorSynergyKernel.cpp  CorridorSynergyKernel.hpp
src/quantum/: quantum_plane_kernel.rs
tests/aln/: QubitEcoParticle.v1.smoketest.aln
tools/: ecosafety-check.ps1  luacicheckcrossplanedependencies.lua
tools/aln-chat-functions/src/: lib.rs
tools/researchplan-emitter/src/: main.rs
vsc-artemis-core/configs/: nexus-eco-lanes.aln
vsc-artemis-core/src/: nexus_eco_router.rs
vsc-artemis-guards/src/: qubit_eco_particle.rs
vsc-artemis-qpu-specs/: artemis-quantum-circuit-invariants.aln
web/: dashboard.js
wiring/: nexus_connector.lua
